hopefully add map and icon

--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,21 @@
 
     <link rel="stylesheet" type="text/css" href="./style.css" />
 
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+    integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
+    crossorigin=""/>
+
+    <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
+        integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
+        crossorigin=""></script>
   </head>
   <body>
-    <h1> hello </h1>
-    <p> hello pt2 </p>
+    <div id="text">
+        <h1> hello </h1>
+        <p> hello pt2 </p>
+    </div>
+    <div id="map">
+        
+    </div>
   </body>
 </html>
